objects/Account.object
<CustomObject>
    <fields>
        <fullName>EBQ_Cadence__c</fullName>
        <label>EBQ Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>B5</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
                <value>
                    <fullName>D5</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>E5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBQ_Cycle__c</fullName>
        <label>EBQ Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBQ_Rep2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBQ Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>To designate where customers are based</description>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Reminder_Frequency__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Escalation Reminder Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ted Elliott</fullName>
                </value>
                <value>
                    <fullName>Sanjay Gidwani</fullName>
                </value>
                <value>
                    <fullName>David Brooks</fullName>
                </value>
                <value>
                    <fullName>Federico Larson</fullName>
                </value>
                <value>
                    <fullName>Philipp Rackwitz</fullName>
                </value>
                <value>
                    <fullName>Andrew Leigh</fullName>
                </value>
                <value>
                    <fullName>Arwa Kaddoura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhausted_Reason__c</fullName>
        <description>Related to this user story: US-0023977</description>
        <label>Exhausted Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exhausted_Until__c</fullName>
        <description>Related to this user story: US-0023977</description>
        <label>Exhausted Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FB_Company_Key__c</fullName>
        <label>FB Company Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Email_Received__c</fullName>
        <label>First Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Email_Sent__c</fullName>
        <label>First Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FunnelBeam_Enrichment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FunnelBeam Enrichment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FunnelBeam_Enrichment_Status__c</fullName>
        <label>FunnelBeam Enrichment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunnelBeam_Posting_Tag__c</fullName>
        <label>FunnelBeam Posting Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G2Crowd__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G2Crowd__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Company_FT_Global_500_Rank__c</fullName>
        <label>Global Company FT Global 500 Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Company_Fortune_1000_Rank__c</fullName>
        <label>Global Company Fortune 1000 Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Company_Name__c</fullName>
        <label>Global Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Company_Success_Champion__c</fullName>
        <label>Global Company Success Champion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Company_Success_Lead__c</fullName>
        <label>Global Company Success Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gong Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greenfield__c</fullName>
        <description>This account has never had an opportunity.</description>
        <formula>Opportunity_Count__c = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This account has never had an opportunity.</inlineHelpText>
        <label>Greenfield</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Premier_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Used_Copado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Used Copado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Consumed__c</fullName>
        <label>Hours Consumed</label>
        <summarizedField>Professional_Service_Consumption__c.Hours_consumed__c</summarizedField>
        <summaryForeignKey>Professional_Service_Consumption__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Purchased__c</fullName>
        <label>Hours Purchased</label>
        <summarizedField>Professional_Services_Allowance__c.Hours_purchased__c</summarizedField>
        <summaryForeignKey>Professional_Services_Allowance__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implemented_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implemented Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Services_Supported__c</fullName>
        <label>Industry Services Supported</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HLS</fullName>
                </value>
                <value>
                    <fullName>PubSec</fullName>
                </value>
                <value>
                    <fullName>FINS</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Comms Media</fullName>
                </value>
                <value>
                    <fullName>CPG Retail</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Travel Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Beta_Programs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Beta Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Email_Subject__c</fullName>
        <defaultValue>&quot;Copado Invoice __PO_NUMBER__&quot;</defaultValue>
        <inlineHelpText>Use __PO_NUMBER__ to add PO number dynamically when sending emails</inlineHelpText>
        <label>Invoice Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>JBCXM_Account_CustInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Platforms_Serviced__c</fullName>
        <label>Key Platforms Serviced</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce - Service</fullName>
                </value>
                <value>
                    <fullName>Salesforce - Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Salesforce - Heroku</fullName>
                </value>
                <value>
                    <fullName>Salesforce - Mulesoft</fullName>
                </value>
                <value>
                    <fullName>Salesforce - CPQ</fullName>
                </value>
                <value>
                    <fullName>Salesforce - Industries</fullName>
                </value>
                <value>
                    <fullName>Salesforce - Sales</fullName>
                </value>
                <value>
                    <fullName>Salesforce - Vlocity</fullName>
                </value>
                <value>
                    <fullName>Salesforce - Commerce Cloud</fullName>
                </value>
                <value>
                    <fullName>nCino</fullName>
                </value>
                <value>
                    <fullName>Veeva</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>ServiceNow</fullName>
                </value>
                <value>
                    <fullName>Google Cloud Platform</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Business_Review_Date__c</fullName>
        <label>Last Business Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Call_In__c</fullName>
        <label>Last Call In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Out__c</fullName>
        <label>Last Call Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Meeting__c</fullName>
        <label>Last Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Missing_Contact_Found__c</fullName>
        <label>Last Missing Contact Found</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Lookup (deprecated)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Lookup</relationshipLabel>
        <relationshipName>Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Used to get a granular look at our EBQ campaigns for each lead source and across both leads and contacts.</description>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Data__c</fullName>
        <description>This Field will be used for Distinguishing Legacy Data Migrated from Acquisition</description>
        <label>Legacy Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Context</fullName>
                </value>
                <value>
                    <fullName>Qentinel</fullName>
                </value>
                <value>
                    <fullName>Qualibrate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>This Field will be used for Distinguishing Legacy Data Migrated from Acquisition and store the record id of the legacy system for traceability purposes.</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <inlineHelpText>Number of Salesforce licenses</inlineHelpText>
        <label># SF Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunch_Completed__c</fullName>
        <label>Lunch Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Missing_Contacts__c</fullName>
        <label>Missing Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mulesoft_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mulesoft AE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Mulesoft AE)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <label>NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Named__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Named</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Meeting__c</fullName>
        <label>Next Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_business_review_date__c</fullName>
        <label>Next business review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_step__c</fullName>
        <description>Field created per US-0031500 to preserve the migrated data from Qualibrate records.</description>
        <label>Next_step (Qualibrate)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Open_opportunities__c</fullName>
        <description>Count of open opportunities</description>
        <inlineHelpText>Count of open opportunities</inlineHelpText>
        <label>No. Open opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>closed, Closed Won, Closed Lost, Fully Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Orgs__c</fullName>
        <description>Number of orgs in the production environment.</description>
        <inlineHelpText>Number of orgs in the production environment.</inlineHelpText>
        <label>No. of Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Invoices__c</fullName>
        <description>Used for Workflowrule calculation.</description>
        <inlineHelpText>This counts the number of invoices to determine if account is customer or prospect.</inlineHelpText>
        <label>Number of Invoices</label>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OA__CLOSED_ACTIVITIES__c</fullName>
        <label>Closed Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__OPEN_ACTIVITIES__c</fullName>
        <label>Open Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_pricing_model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old pricing model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarded_Date__c</fullName>
        <label>Onboarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <description>Count of related opportunity.</description>
        <inlineHelpText>Count of related opportunity.</inlineHelpText>
        <label>Opportunity Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>OrgId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PO_Required__c</fullName>
        <label>PO Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Available_Hours__c</fullName>
        <formula>Hours_Purchased__c -  Hours_Consumed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Remaining Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Discount_Matrix_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to flag any existing customers that have a contractual obligation for Discount Matrix-based pricing.</description>
        <inlineHelpText>Indicates that the Account has a contract requiring existing Discount Matrix-based pricing.</inlineHelpText>
        <label>Discount Matrix Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Copado_Billing_Entity__c</fullName>
        <label>Copado Billing Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Copado, Inc.</fullName>
                </value>
                <value>
                    <fullName>Copado Ltd.</fullName>
                </value>
                <value>
                    <fullName>Copado Netherlands B.V.</fullName>
                </value>
                <value>
                    <fullName>Copado Solutions, S.L.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <description>Automation will update to &apos;Emerging&apos; if field is blank and type equals &apos;Partner&apos;</description>
        <inlineHelpText>Cannot be blank if type equals &apos;Partner&apos; and will default to &apos;Emerging&apos;</inlineHelpText>
        <label>Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unofficial Partner</fullName>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Silver Partner</fullName>
                    <label>Silver</label>
                </value>
                <value>
                    <fullName>Gold Partner</fullName>
                    <label>Gold</label>
                </value>
                <value>
                    <fullName>Platinum Partner</fullName>
                    <label>Platinum</label>
                </value>
                <value>
                    <fullName>ISV Partner</fullName>
                    <isActive>false</isActive>
                    <label>ISV Partner</label>
                </value>
                <value>
                    <fullName>Technology Partner</fullName>
                    <isActive>false</isActive>
                    <label>Technology Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Success_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Copado partner success manager assigned to the account.</description>
        <label>Partner Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Success_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Types__c</fullName>
        <description>Partners (SIs, consulting firms, and ISVs) may choose one these relationships with Copado.
Automation will update to &apos;Consulting Partner&apos; if it is blank and type equals Partner</description>
        <inlineHelpText>Select one or more of the following partner types. Cannot be blank if type equals Partner and will default to &apos;Consulting Partner&apos;</inlineHelpText>
        <label>Partner Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technology Integration Partner</fullName>
                    <label>ISV Partner</label>
                </value>
                <value>
                    <fullName>Consulting Partner</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Copado Implementation Partner</fullName>
                    <isActive>false</isActive>
                    <label>Copado Implementation Partner</label>
                </value>
                <value>
                    <fullName>Managed Services Provider</fullName>
                    <isActive>false</isActive>
                    <label>Managed Services Provider</label>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                    <isActive>false</isActive>
                    <label>Referral Partner</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                    <isActive>false</isActive>
                    <label>Reseller</label>
                </value>
                <value>
                    <fullName>Training Partner</fullName>
                    <isActive>false</isActive>
                    <label>Training Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Health__c</fullName>
        <label>Payment Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-time</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>